# Copyright 2018-2025 the Deno authors. MIT license.

[workspace]
resolver = "2"
members = [
  "bench_util",
  "cli",
  "cli/lib",
  "cli/rt",
  "cli/snapshot",
  "ext/broadcast_channel",
  "ext/cache",
  "ext/canvas",
  "ext/console",
  "ext/cron",
  "ext/crypto",
  "ext/fetch",
  "ext/ffi",
  "ext/fs",
  "ext/http",
  "ext/io",
  "ext/kv",
  "ext/napi",
  "ext/napi/sym",
  "ext/net",
  "ext/node",
  "ext/rt_helper",
  "ext/telemetry",
  "ext/url",
  "ext/web",
  "ext/webgpu",
  "ext/webidl",
  "ext/websocket",
  "ext/webstorage",
  "resolvers/deno",
  "resolvers/node",
  "resolvers/npm_cache",
  "runtime",
  "runtime/permissions",
  "tests",
  "tests/ffi",
  "tests/napi",
  "tests/util/server",
]
exclude = ["tests/util/std/hash/_wasm"]

[workspace.package]
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/denoland/deno"

[workspace.dependencies]
deno_ast = { version = "=0.46.5", features = ["transpiling"] }
deno_core = { version = "0.343.0" }

deno_cache_dir = "=0.18.0"
deno_config = { version = "=0.52.0", features = ["workspace"] }
deno_doc = "=0.171.1"
deno_error = "=0.5.6"
deno_graph = "=0.89.4"
deno_lint = "=0.74.0"
deno_lockfile = "=0.27.1"
deno_media_type = { version = "=0.2.8", features = ["module_specifier"] }
deno_native_certs = "0.3.0"
deno_npm = "=0.32.0"
deno_package_json = { version = "=0.6.0", default-features = false }
deno_path_util = "=0.3.2"
deno_semver = "=0.7.1"
deno_task_shell = "=0.23.0"
deno_terminal = "=0.2.2"
deno_unsync = "0.4.2"
deno_whoami = "0.1.0"

denokv_proto = "0.10.0"
denokv_remote = "0.10.0"
# denokv_sqlite brings in bundled sqlite if we don't disable the default features
denokv_sqlite = { default-features = false, version = "0.10.0" }

# exts
deno_broadcast_channel = { version = "0.196.0", path = "./ext/broadcast_channel" }
deno_cache = { version = "0.134.0", path = "./ext/cache" }
deno_canvas = { version = "0.71.0", path = "./ext/canvas" }
deno_console = { version = "0.202.0", path = "./ext/console" }
deno_cron = { version = "0.82.0", path = "./ext/cron" }
deno_crypto = { version = "0.216.0", path = "./ext/crypto" }
deno_fetch = { version = "0.226.0", path = "./ext/fetch" }
deno_ffi = { version = "0.189.0", path = "./ext/ffi" }
deno_fs = { version = "0.112.0", path = "./ext/fs" }
deno_http = { version = "0.200.0", path = "./ext/http" }
deno_io = { version = "0.112.0", path = "./ext/io" }
deno_kv = { version = "0.110.0", path = "./ext/kv" }
deno_napi = { version = "0.133.0", path = "./ext/napi" }
deno_net = { version = "0.194.0", path = "./ext/net" }
deno_node = { version = "0.140.0", path = "./ext/node" }
deno_os = { version = "0.19.0", path = "./ext/os" }
deno_process = { version = "0.17.0", path = "./ext/process" }
deno_telemetry = { version = "0.24.0", path = "./ext/telemetry" }
deno_tls = { version = "0.189.0", path = "./ext/tls" }
deno_url = { version = "0.202.0", path = "./ext/url" }
deno_web = { version = "0.233.0", path = "./ext/web" }
deno_webgpu = { version = "0.169.0", path = "./ext/webgpu" }
deno_webidl = { version = "0.202.0", path = "./ext/webidl" }
deno_websocket = { version = "0.207.0", path = "./ext/websocket" }
deno_webstorage = { version = "0.197.0", path = "./ext/webstorage" }
denort_helper = { version = "0.1.0", path = "./ext/rt_helper" }

# workspace libraries
deno_bench_util = { version = "0.196.0", path = "./bench_util" }
deno_lib = { version = "0.18.0", path = "./cli/lib" }
deno_npm_cache = { version = "0.21.0", path = "./resolvers/npm_cache" }
deno_permissions = { version = "0.61.0", path = "./runtime/permissions" }
deno_resolver = { version = "0.33.0", path = "./resolvers/deno" }
deno_runtime = { version = "0.210.0", path = "./runtime" }
deno_snapshots = { version = "0.17.0", path = "./cli/snapshot" }
napi_sym = { version = "0.132.0", path = "./ext/napi/sym" }
node_resolver = { version = "0.40.0", path = "./resolvers/node" }
test_util = { package = "test_server", path = "./tests/util/server" }

# widely used libraries
anyhow = "1.0.57"
async-compression = "0.4"
async-once-cell = "0.5.4"
async-stream = "0.3"
async-trait = "0.1.73"
base32 = "=0.5.1"
base64 = "0.22.1"
base64-simd = "0.8"
bencher = "0.1"
boxed_error = "0.2.3"
brotli = "6.0.0"
bytemuck = "1.17.1"
bytes = "1.4.0"
cache_control = "=0.2.0"
capacity_builder = "0.5.0"
cbc = { version = "=0.1.2", features = ["alloc"] }
# Note: Do not use the "clock" feature of chrono, as it links us to CoreFoundation on macOS.
#       Instead use util::time::utc_now()
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
color-print = "0.3.5"
dashmap = "5.5.3"
data-encoding = "2.3.3"
data-url = "=0.3.1"
dotenvy = "0.15.7"
dyn-clone = "1"
encoding_rs = "=0.8.35"
error_reporter = "1"
fast-socks5 = "0.9.6"
faster-hex = "0.10.0"
fastwebsockets = { version = "0.8", features = ["upgrade", "unstable-split"] }
file_test_runner = "0.7.3"
filetime = "0.2.16"
flaky_test = "=0.2.2"
flate2 = { version = "1.0.30", default-features = false }
fqdn = "0.3.4"
fs3 = "0.5.0"
futures = "0.3.31"
glob = "0.3.1"
h2 = "0.4.6"
hickory-client = "0.25.0-alpha.4"
hickory-proto = "0.25.0-alpha.4"
hickory-resolver = { version = "0.25.0-alpha.4", features = ["tokio-runtime", "serde"] }
hickory-server = "0.25.0-alpha.4"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.2"
http_v02 = { package = "http", version = "0.2.9" }
httparse = "1.8.0"
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = { version = "0.27.2", default-features = false, features = ["http1", "http2", "tls12", "ring"] }
hyper-util = { version = "0.1.10", features = ["tokio", "client", "client-legacy", "server", "server-auto"] }
hyper_v014 = { package = "hyper", version = "0.14.26", features = ["runtime", "http1"] }
idna = "1.0.3"
import_map = { version = "0.21.0", features = ["ext"] }
indexmap = { version = "2", features = ["serde"] }
ipnet = "2.3"
ipnetwork = "0.20.0"
itertools = "0.14"
jsonc-parser = { version = "=0.26.2", features = ["serde"] }
jupyter_runtime = "=0.19.0"
lazy-regex = "3"
libc = "0.2.168"
libsqlite3-sys = "0.30.1"
libz-sys = { version = "1.1.20", default-features = false }
log = { version = "0.4.20", features = ["kv"] }
lsp-types = "=0.97.0" # used by tower-lsp and "proposed" feature is unstable in patch releases
memchr = "2.7.4"
mime = "0.3.16"
monch = "=0.5.0"
netif = "0.1.6"
notify = "=6.1.1"
ntest_timeout = "0.9.3"
num-bigint = { version = "0.4", features = ["rand"] }
num-bigint-dig = "0.8.2"
num-integer = "0.1.45"
num-traits = "0.2.19"
once_cell = "1.17.1"
os_pipe = { version = "=1.2.1", features = ["io_safety"] }
parking_lot = "0.12.0"
path-clean = "=0.1.0"
percent-encoding = "2.3.0"
phf = { version = "0.11", features = ["macros"] }
pin-project = "1.0.11" # don't pin because they yank crates from cargo
pin-project-lite = "0.2.13"
pretty_assertions = "=1.4.1"
prost = "0.13"
prost-build = "0.13"
quick-junit = "0.3.5"
quinn = { version = "0.11.6", default-features = false }
rand = "=0.8.5"
rayon = "1.8.0"
regex = "^1.7.0"
reqwest = { version = "=0.12.5", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks", "json", "http2"] } # pinned because of https://github.com/seanmonstar/reqwest/pull/1955
ring = "^0.17.14"
rusqlite = { version = "0.34.0", features = ["unlock_notify", "bundled", "session", "modern_sqlite", "limits"] } # "modern_sqlite": need sqlite >= 3.49.0 for some db configs
rustls = { version = "0.23.11", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-pemfile = "2"
rustls-tokio-stream = "=0.5.0"
rustls-webpki = "0.102"
rustyline = "=13.0.0"
rustyline-derive = "=0.7.0"
saffron = "=0.1.0"
same-file = "1.0.6"
scopeguard = "1.2.0"
semver = "=1.0.25"
serde = { version = "1.0.149", features = ["derive"] }
serde-value = "0.7"
serde_bytes = "0.11"
serde_json = "1.0.85"
serde_repr = "=0.1.19"
simd-json = "0.14.0"
slab = "0.4"
smallvec = "1.8"
socket2 = { version = "0.5.3", features = ["all"] }
sys_traits = "=0.1.9"
tar = "=0.4.43"
tempfile = "3.4.0"
termcolor = "1.1.3"
thiserror = "2.0.12"
tokio = { version = "1.36.0", features = ["full"] }
tokio-eld = "0.2"
tokio-metrics = { version = "0.3.0", features = ["rt"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12"] }
tokio-socks = "0.5.1"
tokio-util = "0.7.4"
tower = { version = "0.5.2", default-features = false, features = ["retry", "util"] }
tower-http = { version = "0.6.1", features = ["decompression-br", "decompression-gzip"] }
tower-lsp = { package = "deno_tower_lsp", version = "=0.4.3", features = ["proposed"] }
tower-service = "0.3.2"
tracing = "0.1"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.19"
twox-hash = "=1.6.3"
typed-arena = "=2.0.2"
url = { version = "2.5", features = ["serde", "expose_internals"] }
urlpattern = "0.3.0"
uuid = { version = "1.3.0", features = ["v4"] }
walkdir = "=2.5.0"
weak-table = "0.3.2"
web-transport-proto = "0.2.3"
webpki-root-certs = "0.26.5"
webpki-roots = "0.26"
which = "6"
yoke = { version = "0.7.4", features = ["derive"] }
zeromq = { version = "=0.4.1", default-features = false, features = ["tcp-transport", "tokio-runtime"] }
zip = { version = "2.4.1", default-features = false, features = ["flate2"] }

opentelemetry = "0.27.0"
opentelemetry-http = "0.27.0"
opentelemetry-otlp = { version = "0.27.0", features = ["logs", "http-proto", "http-json"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio", "trace"] }

# canvas
image = { version = "0.25.4", default-features = false }
lcms2 = "6.1.0"

# cli
anstream = "0.6.14"
bincode = "=1.3.3"
clap = "=4.5.30"
clap_complete = "=4.5.45"
clap_complete_fig = "=4.5.2"
console_static_text = "=0.8.3"
crossterm = "0.28.1"
dhat = "0.3.3"
dissimilar = "=1.0.9"
dprint-plugin-json = "=0.20.0"
dprint-plugin-jupyter = "=0.2.0"
dprint-plugin-markdown = "=0.18.0"
dprint-plugin-typescript = "=0.94.0"
env_logger = "=0.11.6"
eszip = "=0.85.0"
fancy-regex = "=0.14.0"
libsui = "0.5.0"
malva = "=0.11.2"
markup_fmt = "=0.19.1"
open = "5.0.1"
pathdiff = "0.2.1"
pretty_yaml = "=0.5.0"
rustc-hash = "2.1.1"
sqlformat = "=0.3.5"
strsim = "0.11.1"
text-size = "=1.1.1"
text_lines = "=0.6.0"
unicode-width = "0.1.3"
zstd = "=0.13.2"

# crypto
aead-gcm-stream = "0.4"
aes = "=0.8.3"
aes-gcm = "0.10"
aes-kw = "0.2.1"
blake2 = "0.10.6"
const-oid = "0.9.5"
ctr = { version = "0.9.2", features = ["alloc"] }
curve25519-dalek = "4.1.3"
der = "0.7.9"
digest = "0.10.5"
dsa = "0.6.3"
ecb = "=0.1.2"
ecdsa = "0.16.9"
ed25519-dalek = "2.1.1"
ed448-goldilocks = "0.8.3"
elliptic-curve = { version = "0.13.4", features = ["alloc", "arithmetic", "ecdh", "std", "pem", "jwk"] }
hkdf = "0.12.3"
k256 = "0.13.1"
md-5 = "0.10.5"
md4 = "0.10.2"
p224 = { version = "0.13.0", features = ["ecdh"] }
p256 = { version = "0.13.2", features = ["ecdh", "jwk"] }
p384 = { version = "0.13.0", features = ["ecdh", "jwk"] }
p521 = "0.13.3"
pbkdf2 = "0.12.1"
pkcs8 = "0.10.2"
ripemd = "0.1.3"
rsa = { version = "0.9.3", default-features = false, features = ["std", "pem", "hazmat"] } # hazmat needed for PrehashSigner in ext/node
scrypt = "0.11.0"
sec1 = "0.7"
sha1 = { version = "0.10.6", features = ["oid"] }
sha2 = { version = "0.10.8", features = ["oid"] }
sha3 = "0.10.8"
signature = "2.1"
sm3 = "0.4.2"
spki = "0.7.2"
x25519-dalek = "2.0.0"
x509-parser = "0.15.0"

# ffi
cranelift = "0.116"
cranelift-native = "0.116"
dlopen2 = "0.6.1"
libffi = "=4.0.0"
libffi-sys = "=3.2.0"
memmap2 = "0.9"

# napi
libloading = "0.7"
libuv-sys-lite = "=1.48.2"
napi-build = "1"
napi-sys = { version = "=2.2.2", default-features = false }

# webgpu
raw-window-handle = "0.6.0"
wgpu-core = "24.0.0"
wgpu-types = "24.0.0"

# macros
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

# unix deps
nix = "=0.27.1"
tokio-vsock = "0.7"

# windows deps
junction = "=1.2.0"
win32job = "2"
winapi = "=0.3.9"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Media", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_WindowsProgramming", "Wdk", "Wdk_System", "Wdk_System_SystemInformation", "Win32_Security", "Win32_System_Pipes", "Wdk_Storage_FileSystem", "Win32_System_Registry", "Win32_System_Kernel", "Win32_System_Threading", "Win32_UI", "Win32_UI_Shell"] }
winres = "=0.1.12"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size
split-debuginfo = "packed"
debug = "line-tables-only"

[profile.dev]
split-debuginfo = "packed"

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

# Faster to compile than `release` but with similar performance.
[profile.release-lite]
inherits = "release"
codegen-units = 128
lto = "thin"

# Key generation is too slow on `debug`
[profile.dev.package.num-bigint-dig]
opt-level = 3

# rusty-v8 needs at least -O1 to not miscompile
[profile.dev.package.v8]
opt-level = 1

[profile.release.package.async-compression]
opt-level = 3
[profile.release.package.base64-simd]
opt-level = 3
[profile.release.package.brotli]
opt-level = 3
[profile.release.package.brotli-decompressor]
opt-level = 3
[profile.release.package.bytes]
opt-level = 3
[profile.release.package.deno_bench_util]
opt-level = 3
[profile.release.package.deno_broadcast_channel]
opt-level = 3
[profile.release.package.deno_core]
opt-level = 3
[profile.release.package.deno_crypto]
opt-level = 3
[profile.release.package.deno_fetch]
opt-level = 3
[profile.release.package.deno_ffi]
opt-level = 3
[profile.release.package.deno_http]
opt-level = 3
[profile.release.package.deno_napi]
opt-level = 3
[profile.release.package.deno_net]
opt-level = 3
[profile.release.package.deno_node]
opt-level = 3
[profile.release.package.deno_runtime]
opt-level = 3
[profile.release.package.deno_tls]
opt-level = 3
[profile.release.package.deno_url]
opt-level = 3
[profile.release.package.deno_web]
opt-level = 3
[profile.release.package.deno_websocket]
opt-level = 3
[profile.release.package.fastwebsockets]
opt-level = 3
[profile.release.package.flate2]
opt-level = 3
[profile.release.package.futures-util]
opt-level = 3
[profile.release.package.futures-io]
opt-level = 3
[profile.release.package.futures-channel]
opt-level = 3
[profile.release.package.futures-sink]
opt-level = 3
[profile.release.package.futures-task]
opt-level = 3
[profile.release.package.futures-core]
opt-level = 3
[profile.release.package.hyper]
opt-level = 3
[profile.release.package.miniz_oxide]
opt-level = 3
[profile.release.package.num-bigint-dig]
opt-level = 3
[profile.release.package.rand]
opt-level = 3
[profile.release.package.serde]
opt-level = 3
[profile.release.package.serde_v8]
opt-level = 3
[profile.release.package.libsui]
opt-level = 3
[profile.release.package.test_napi]
opt-level = 3
[profile.release.package.tokio]
opt-level = 3
[profile.release.package.url]
opt-level = 3
[profile.release.package.v8]
opt-level = 3
[profile.release.package.zstd]
opt-level = 3
[profile.release.package.zstd-sys]
opt-level = 3
[profile.release.package.http]
opt-level = 3
[profile.release.package.http-body]
opt-level = 3
[profile.release.package.httparse]
opt-level = 3
[profile.release.package.mio]
opt-level = 3
[profile.release.package.fnv]
opt-level = 3
[profile.release.package.hyper-util]
opt-level = 3
[profile.release.package.httpdate]
opt-level = 3
[profile.release.package.deno_unsync]
opt-level = 3
[profile.release.package.deno_semver]
opt-level = 3
[profile.release.package.deno_npm]
opt-level = 3
[profile.release.package.deno_lockfile]
opt-level = 3
[profile.release.package.deno_npm_cache]
opt-level = 3
